--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,4 +3,7 @@ pkgdown: 2.2.0
 pkgdown_sha: ~
 articles:
   intro: intro.html
-last_built: 2025-11-19T16:18Z
+last_built: 2025-11-19T16:27Z
+urls:
+  reference: /reference
+  article: /articles
