--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,7 @@ pkgdown: 2.2.0
 pkgdown_sha: ~
 articles:
   intro: intro.html
-last_built: 2025-11-20T11:55Z
+last_built: 2025-12-13T20:06Z
 urls:
-  reference: /reference
-  article: /articles
+  reference: https://github.com/bianicoletti/miRHeat/reference
+  article: https://github.com/bianicoletti/miRHeat/articles
