--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     ComplexHeatmap,
     circlize,
     dynamicTreeCut,
-    reshape2
+    reshape2,
+    tibble
 Suggests:
     testthat (>= 3.0.0),
     knitr,
